--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Change the url, username and password to your configuration
 spring.datasource.url = jdbc:mysql://localhost:3306/example?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = 
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
